# search-engine

./: Cargo.toml  README.md  lemmatized.json  package-lock.json  package.json
client/: .eslintrc.cjs  index.html  package-lock.json  package.json
client/src/: App.jsx  main.jsx
client/src/actions/: Post.js
client/src/api/: api.js
client/src/components/form/: Form.js
client/src/components/posts/: Posts.js
client/src/components/posts/post/: Post.js  styles.post.js
client/src/reducers/: Index.js  Posts.js
server/: index.js
server/controllers/: posts.js
server/models/: postMessage.js
server/routes/: posts.js
src/: main.rs
src/database/: mod.rs  pool.rs  queries.rs
src/scoring/: mod.rs  proximity.rs  tf_idf.rs
src/utils/: lemmetization.rs  mod.rs
