[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = "0.7.4"
tokio = "1.37.0"
